fix css on mobile

--- a/src/components/dashboard/MenuItemDashboard.scss
+++ b/src/components/dashboard/MenuItemDashboard.scss
@@ -259,8 +259,8 @@ input[type="file"] {
 
 @media only screen and (max-width: 960px) {
   .menu-item-dashboard-page {
-    margin: 1em;
-    margin-top: 120px;
+    margin: 2em;
+    margin-top: 150px;
   
     .add-menu-item-part, .edit-menu-item-part, .show-menu-item-part {
       .title {
@@ -325,7 +325,7 @@ input[type="file"] {
 @media only screen and (max-width: 500px) {
   .menu-item-dashboard-page {
     margin: 1em;
-    margin-top: 120px;
+    margin-top: 150px;
   
     .add-menu-item-part, .edit-menu-item-part, .show-menu-item-part {
       .title {
